# AutonomusCar

./: autonomous_car_arduino_code.code-workspace
autonomous_car_arduino_code/src/: main.cpp
autonomous_car_rpi_code/: .gitignore  README.md  deploy.sh  drive_car.py  process_image.py  pyproject.toml
autonomous_car_rpi_code/config/: default.yaml
autonomous_car_rpi_code/scripts/: calibrate.py  local_dev.py  pull_raw.sh
autonomous_car_rpi_code/src/autocar/: __main__.py  app.py  config.py  logging_setup.py  tuning.py  yaml_patch.py
autonomous_car_rpi_code/src/autocar/camera/: __init__.py  capture.py  streamer.py  viz.py  webcam.py
autonomous_car_rpi_code/src/autocar/comms/: __init__.py  uart.py
autonomous_car_rpi_code/src/autocar/control/: __init__.py  mixer.py  pid.py
autonomous_car_rpi_code/src/autocar/lidar/: __init__.py  rplidar.py
autonomous_car_rpi_code/src/autocar/vision/: __init__.py  lane_detector.py  overlay.py  perspective.py  track_detector.py
autonomous_car_rpi_code/systemd/: autocar.service
autonomous_car_rpi_code/tests/: test_mixer.py  test_pid.py  test_uart_protocol.py
